--- a/Border_detection/bot.ipynb
+++ b/Border_detection/bot.ipynb
@@ -869,7 +869,11 @@
     "\n",
     "Executing all the code on a single image involves reading the image, converting it to grayscale, applying the Canny edge detection algorithm to detect edges, and then extracting the bordered portion of the image. This process combines the functionalities of edge detection and bordered portion extraction into a single pipeline, resulting in the extraction of the region of interest from the image. \n",
     "\n",
-    "the single functions i used are breakdown of the canny edge algorithm in the code [`full.py`](../full.py) from [`Enigma.py`](Enigma.py), i used the functions above only not cannyedge directly "
+    "the single functions i used are breakdown of the canny edge algorithm in the code [`full.py`](../full.py) from [`Enigma.py`](Enigma.py), i used the functions above only not cannyedge directly \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
